// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With Different Rows Default Rows 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c18:focus {
  outline: none;
}

.c12 {
  display: none;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows With Colored Separators 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c18:focus {
  outline: none;
}

.c12 {
  display: none;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #D2F500;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c24 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #00F0E1;
}

.c24:hover {
  background: #F5F5F5;
}

.c24 > *:first-child {
  padding-left: 0;
}

.c24 > *:nth-last-child(2) {
  padding-right: 0;
}

.c25 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #FFCF00;
}

.c25:hover {
  background: #F5F5F5;
}

.c25 > *:first-child {
  padding-left: 0;
}

.c25 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c24"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c25"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows With Hidden Separator 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c14 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c18:focus {
  outline: none;
}

.c12 {
  display: none;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c13"
      role="row"
    >
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c5 c14"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c15 c10"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c11 c14 c12"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Different Rows Without Hover Highlight 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  width: inherit;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c17:focus {
  outline: none;
}

.c12 {
  display: none;
}

.c3 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c3 > *:first-child {
  padding-left: 0;
}

.c3 > *:nth-last-child(2) {
  padding-right: 0;
}

.c4 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c6 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c1 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c15 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c20 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    role="table"
  >
    <div
      className="c2 c3 c4"
      role="row"
    >
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c5 c6"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c6 c12"
        role="columnheader"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9 c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c12"
        role="cell"
      >
        <div
          className="c15"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c19"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c21 c22"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c12"
        role="cell"
      >
        <div
          className="c15"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c19"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c21 c22"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2 c3"
      role="row"
    >
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c5 c13"
        role="cell"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c14 c10"
          >
            No hover highlight
          </span>
        </div>
      </div>
      <div
        className="c11 c13 c12"
        role="cell"
      >
        <div
          className="c15"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c19"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c21 c22"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
